[tool.poetry]
name = "python-web-11"
version = "0.1.0"
description = ""
authors = ["tetianakondra <tatjana.ukon@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
